# assetario-assigment

./: .gitignore  Cargo.toml  README.md  schema.graphql
appsync/: Cargo.toml
appsync/src/: main.rs
appsync/src/handlers/: country.rs  mod.rs  state.rs
core/: Cargo.toml
core/src/: cache.rs  errors.rs  extract.rs  lib.rs  load.rs  retry_queue.rs  structures.rs  transform.rs  worker.rs
etl/: Cargo.toml
etl/src/: main.rs
infrastructure/: appsync.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf
