[package]
name = "appsync"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
aws-config = "0.15"
aws-sdk-dynamodb = "0.15"
core = {path = "../core"}
futures-util = "0.3"
lambda_runtime = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_dynamo = { version = "4.0", features = ["aws-sdk-dynamodb+0_15"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


