[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async_zip = "0.0.8"
csv-async = "1.2"
futures-core = "0.3"
futures-util = "0.3"
maplit = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = {version = "0.11", features = ["stream", "rustls-tls"] }
rusoto_core = "0.48"
rusoto_dynamodb = "0.48"
rust-s3 = { version = "0.31", features = ["tags", "tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"